# pokemon_ml_project

./: README.md  pyproject.toml
pokemon_ml_project/: .gitignore
pokemon_ml_project/src/: requirements.in  requirements.txt
