[tool.poetry]
name = "pokemon_ml_project"
version = "0.1.0"
description = ""
authors = ["Naoto Hori <naoto.hori@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
kedro = "0.17.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
